syntax = "proto2";

package org.corfudb.test;
option java_package = "org.corfudb.test";

import "corfu_options.proto";
import "google/protobuf/descriptor.proto";
import "sample_appliance.proto";

message FirewallRule {
    optional int64 rule_id = 1 [(org.corfudb.runtime.schema).secondary_key = true];
    optional string rule_name = 2 [(org.corfudb.runtime.schema).secondary_key = true];
    optional org.corfudb.test.Appliance input = 3;
    optional org.corfudb.test.Appliance output = 4;
}

message LogicalSwitch {
    optional int64 switch_id = 1 [(org.corfudb.runtime.schema).secondary_key = true];
    optional org.corfudb.test.Appliance input = 2;
    repeated int64 aray = 3 [(org.corfudb.runtime.schema).secondary_key = true];
}

message ManagedResources {
    optional string create_user = 1;
    optional int64 version = 2 [(org.corfudb.runtime.schema).version = true];
    optional int64 create_timestamp = 3;
    optional NestedTypeA nested_type = 4;
}

message ManagedMetadata {
    optional int64 revision = 1;
    optional int64 create_time = 2;
    optional string create_user = 3;
    optional int64 last_modified_time = 4;
    optional string last_modified_user = 5;
}

message EventInfo {
    optional uint32 id = 1;
    optional string name = 2;
    optional uint32 port = 3;
    optional int64 event_time = 4 [(org.corfudb.runtime.schema).secondary_key = true];
    optional uint32 frequency = 5;
    optional Uuid uuid = 6 [(org.corfudb.runtime.schema).secondary_key = true];
}

message Uuid {
    option (org.corfudb.runtime.table_schema).stream_tag = "tag";
    optional uint64 msb = 1;
    optional uint64 lsb = 2;
}

message NestedTypeA {
    repeated NestedTypeB tag = 1;
}

message NestedTypeB {
    option (org.corfudb.test.mgoptions).skip_snapshot = true;
    optional string something = 1;
    optional string something2 = 2;
}

message ManagedResourceOptionsMsg {
    optional bool skip_snapshot = 1;
}

message SampleTableAMsg {
    option (org.corfudb.runtime.table_schema).stream_tag = "sample_streamer_1";
    option (org.corfudb.runtime.table_schema).stream_tag = "sample_streamer_2";
    option (org.corfudb.runtime.table_schema).requires_backup_support = true;
    option (org.corfudb.runtime.table_schema).ownership_validation = true;
    option (org.corfudb.runtime.table_schema).is_federated = true;

    optional string payload = 1;
}

message SampleTableBMsg {
    option (org.corfudb.runtime.table_schema).stream_tag = "sample_streamer_2";
    option (org.corfudb.runtime.table_schema).stream_tag = "sample_streamer_3";
    option (org.corfudb.runtime.table_schema).requires_backup_support = false;
    option (org.corfudb.runtime.table_schema).is_federated = true;

    optional string payload = 1;
}

message SampleTableCMsg {
    option (org.corfudb.runtime.table_schema).requires_backup_support = true;
    option (org.corfudb.runtime.table_schema).ownership_validation = true;
    option (org.corfudb.runtime.table_schema).is_federated = true;

    optional string payload = 1;
}

message SampleTableDMsg {
    option (org.corfudb.runtime.table_schema).stream_tag = "sample_streamer_4";
    option (org.corfudb.runtime.table_schema).requires_backup_support = false;
    option (org.corfudb.runtime.table_schema).is_federated = true;

    optional string payload = 1;
}

extend google.protobuf.MessageOptions {
    optional ManagedResourceOptionsMsg mgoptions = 54312;
}
